--- a/code/style.css
+++ b/code/style.css
@@ -138,7 +138,7 @@ p{
   box-sizing: border-box;
   width: 100%;
   max-width: 1100px;
-  margin: 10px 10px 10px 10px;
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -148,7 +148,7 @@ p{
 
 .other-news1, .other-news2, .other-news4{
   box-sizing: border-box;
-  width: 60%;
+  width: 70%;
   padding: 10px;
   margin: 40px 0px 0px 0px;
   background-color: #A0844E;
@@ -161,13 +161,13 @@ p{
 .image-news1, .image-news2, .image-news4{
   width: 100%;
   align-items: center;
-
+  transition: .5s ease;
 }
 
 
 .other-news3{
   box-sizing: border-box;
-  width: 60%;
+  width: 70%;
   padding: 10px;
   margin: 40px 0px 0px 0px;
   background-color: #FCF6EB;
@@ -190,14 +190,36 @@ p{
   margin: 10px 0px 0px 0px;
   text-align: center;
 }
-
-.red {
-  background-color: red;
+.pic-frame {
+  position: relative;
 }
 
-.red:hover .imageimage-news1 {
+.hoover-title{
+  transition: .5s ease;
+  opacity: 0;
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+
+.hoover:hover .hoover-title {
+  opacity: 1;
+}
+
+.hoover:hover .image-news1 {
+  opacity: 0.3;
+  transition: .5s ease;
+}
+
+.hoover:hover .image-news3 {
   opacity: 0.3;
 }
+
 
 /***** FOOTER ****/ 
 
