--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,101 @@
-html {
-  background: #0025ff;
-  color: #fff;
+
+body{
+  color: black;
+  margin:0px;
+  font-family: 'Baloo Tamma 2', cursive;
+  background-color: rgb(240, 235, 227);
 }
+html { font-size: 16px; }
+
+/** Header **/
+header{
+	padding: 30px;
+	background-color: whitesmoke;
+	height: 70px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+header h1{
+	font-size: 30px;
+	margin:0px;
+	padding:0px;
+	align-items: flex-start;
+}
+nav{
+	display: none;
+}
+/*** Big news section **/
+  .big-news p{
+	padding: 1rem;
+	width:300px;
+	height:70%;  
+  }
+  .big-news{
+	padding: 1rem;
+	width:300px;
+	height:70%;
+	height: 600px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	 flex-wrap: wrap;
+  }
+ 
+  .big_news img { 
+	  width:100%; 
+	  height:100%; 
+  } 
+/*** News cards section **/
+.card {
+  padding: 1rem;
+  width:300px;
+  height:90%; 
+}
+.news_cards {
+	max-width: 1200px;
+	margin: 0 auto;
+	display: grid;
+	grid-gap: 1rem;
+}
+.news_cards img { 
+	width:100%; 
+	height:100%; 
+} 
+
+/*** Media Queries **/
+@media (min-width: 600px) {
+	.news_cards { 
+		grid-template-columns: repeat(2, 1fr); 
+	}
+  }
+
+@media (min-width: 900px) {
+	.news_cards { 
+		grid-template-columns: repeat(3, 1fr); 
+	}
+	nav{
+		color:black;
+		text-decoration:none;
+		width:50%;
+		display:flex;
+		justify-content: space-evenly;
+	}
+}
+
+
+/* Footer */
+footer{
+  margin: 20px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  background-color:white;
+
+}
+
+footer img{
+	height: 45px;
+	width: 45px;
+}
+
