--- a/code/style.css
+++ b/code/style.css
@@ -1,14 +1,91 @@
 /* Mobile first*/
-
 html {
-  background: #F1F1EF;
-  font-family: 'Montserrat', sans-serif;
-  color: black;
+ background: #F1F1EF;
+ color: black;
+ font-family: 'Montserrat', sans-serif;
 }
 
-img {
+body { 
+  position: relative;
+}
+
+header {
+  
+  width: 100%;
+  height: 75px;
+  top: 0px;
+  right: 0px;
+  left: 0px;
+  position: fixed;
+  font-family: 'Montserrat', sans-serif;
+  background-color: darkgoldenrod;
+}
+
+header img {
+  width: 50px;
+  height: auto;
+}
+
+main {
+  position: static;
+}
+
+.news, .big-news {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+}
+
+article .article-container {
+ display: flex;
+ flex-wrap: wrap;
+ justify-content: center;
+}
+
+.article-container .big-news, .big-newsimage {
   width: 100%;
   height: auto;
+  
+}
+
+.article-container .news-image {
+  width: 100%;
+  height: auto;
+    
+  
+}
+ul { /* Inside the navbar*/
+  display: flex;
+  flex-direction: flex-start;
+  align-content: center;
+  list-style-type: none;
+  font-size: 20px; 
+  top: 0px;
+  right: 0px;
+  left: 0px;
+}
+
+
+footer {
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  font-size: 15px;
+  padding: 10px;
+  
+  background-color: darkgoldenrod;
+}
+
+h1 {
+  font-size: 20px;
+}
+
+h2 {
+  font-size: 15px;
+}
+
+p {
+  font-size: 15px;
+  padding: 5px;
 }
 
 a {
@@ -24,207 +101,107 @@ a:hover {
   color: gray;
 }
 
-ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  align-content: center;
-  list-style-type: none;
-  font-size: 30px; 
-}
-
-header {
-  border-bottom: solid 2px;
-  border-color: lightgrey;
-}
-
-.li-2 {
+.nailtech-news { /*Nailtech News text in the header*/
  font-family: 'Monoton';
 }
 
-section { /* Sections with the articles*/
-  position: relative;
-  background-color: white;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
-}
 
-div { /* Text overlay for the images*/
-  position: absolute;
-  bottom: 20px;
-  right: 20px;
-  left:20px;
-  background-color: rgba(241, 241, 239, 0.6);
-  color: black;
-  padding: 10px;
-  max-height: 80%;
-}
-
-h1  {
-  font-size: 30px;
-}
-
-p {
-  font-size: 20px;
-}
-
-li {
-  margin: 10px;
-}
- 
-footer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  font-size: 15px;
-  padding: 5px; 
-
-}
-
-.big-news {
-  width: auto;
-}
-
-.big-news-text {
-  position: absolute;
-  bottom: 20px;
-  right: 20px;
-  left:20px;
-  background-color: rgba(241, 241, 239, 0.6);
-  color: black;
-  padding: 20px;
-}
-
-.article-grid {
-  display: flex;
-  flex-wrap: wrap;
-  margin: auto;
-  justify-content: space-evenly;
-}
-
-.news  {
-  margin: auto;
-  margin-top: 20px;
-}
 
 /*Hide links in navbar for mobile*/
 @media (max-width: 767px) {
 
- .li-3, .li-4 {
+ .nailtech-news {
+  position: relative;
+  left: 70px;
+}
+
+ .booking, .education, .li-link {
   display: none;
  }
 }
-
+/*Tablet only*/
+@media (max-width: 1023px;) {
+   .nailtech-news {
+     order: -1;
+   }
+}
 /* Tablet*/
 @media (min-width: 768px) {
 
-  div {
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-    left: 20px;
-    background-color: rgba(241, 241, 239, 0.6);
-    color: black;
-    padding: 10px;
-    overflow: hidden;
-  }
-    
-  h1 { 
-    font-size: 30px;
-  }
-
-  h2 {
-    font-size: 25px;
-  }
-
-  p {
-    font-size: 15px;
-  }
-
-  ul {
-    font-size: 30px;
-  }
-
-  .li-2 {
-    order: -1;
-  }
-   
-  .big-news {
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 400px;
-    overflow: hidden;
-    margin: 20px;
-  }
-
- .big-news-text {
-   position: absolute;
-   bottom: 20px;
-   right: 0px;
-   left:50%;
-   top: 20px;
-   background-color: rgba(241, 241, 239, 0.6);
-   color: black;
-   padding: 20px;
-  } 
+   ul {
+     justify-content: space-around;
   
-  .news  {
-   margin: auto;
-   width: 40%;
-  }
+     
+   }
+
+   h2 {
+     padding: 5px;
+   }
+
+  
+    
+ .article-container {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+ }
+
+ .big-news {
+  width: 100%;
+  height: auto;
+  margin: 40px;
+}
+  
+.news {
+  width: 45%;
+  margin: 5px;
 }
 
  /* Desktop */ 
 @media (min-width: 1024px) {
   
-  ul {
-    font-size: 20px;
-  }
 
-  div {
-    position: absolute;
-    bottom: 10px;
-    right: 20px;
-    left:20px;
-    background-color: rgba(241, 241, 239, 0.6);
-    color: black;
-    overflow: hidden;
+ 
+    
   }
-
-  div:hover {
-    border-radius: 25px;
-  }
-
   h1 {
-    font-size: 60px;
+    font-size: 40px;
   }
-
   h2 {
-    font-size:25px;
+    font-size: 25px;
+    padding: 5px;
   }
 
-  p {
-    font-size: 15px;
-  }
+ .li-link {
+   order: 2;
+ }
 
-  .li-1 {
-    order: -1;
-  }
+ .logo, .nailtech-news {
+   flex-direction: flex-start;
+   
+ }
 
-  .li-2 {
-    font-size: 30px;
-  }
-  
-  .big-news {
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 400px;
-    overflow: hidden;
-  }
+ .education, .booking, .li-link {
+   flex-direction: flex-end;
+ }
+   
+.article-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
 
-  .news  {
-    margin: 20px;
-    width: 20%;
-  }
+.big-news {
+ width: 100%;
+ height: auto;
+ margin: 50px;
+}
+ 
+.news {
+ width: 20%;
+ margin-bottom: 25px;
+ 
+ }
+
+ 
 }
