--- a/code/style.css
+++ b/code/style.css
@@ -1,30 +1,23 @@
 html {
   background: #FFFFFF;
   color:#121212;
-  padding: 0px 20px;
 }
 
 /** HEADER **/
 
 header {
+  padding: 10px 20px 0px 20px;
   background: #FFFFFF;
   color: #121212;
   font-family: Helvetica;
   display: flex;
   align-items: center;
   justify-content: space-between;
-
 }
 
-/* header > .hamburger {
-  justify-content: flex-start;
-
-} */
-
 .hamburger {
-  display: none; /*odkomentiraj kasneje?*/
-  /* display: flex; */
-  flex-direction: column; /*to spread them, since they are stacked*/
+  display: flex;
+  flex-direction: column; /*to spread the lines, since they are stacked*/
   justify-content: space-between;
   height: 12px;
   width: 18px;
@@ -45,7 +38,7 @@ header img {
 
 /** NAVIGATION BAR**/
 nav {
-  /* display: none; */ /*odkomentiraj kasneje*/
+  display: none;
 }
 
 nav a {
@@ -54,62 +47,79 @@ nav a {
   margin: 0px 0px 0px 12px;
 }
 
+main {
+  padding: 0px 20px;
+}
+
 /** BIG NEWS BOX**/
 .big-news {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-
-  /* max-width: 100%; */
-  border: 3px dotted green;
-  /* transition: 0.3s; */
+  /* border: 3px dotted green; */
 }
 
 .big-news img {
-  width: 400px;
+  width: 100%;
   height: 200px;
-  border: 3px solid red;
-  /* display: inline-flex;
-  justify-content: space-around; */
-  /* justify-content: space-around; */
+  /* border: 3px solid red; */
 }
 
 .big-news-card {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  border: 3px solid orange;
+  /* border: 3px solid orange; */
+  width: 100%;
+  border-bottom: 2px #E5E5E5 solid;
 }
 
-/* .big-news-card:hover {
+.big-news-article a {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 14px;
+  text-align: left;
+  color: #DB3334;
+}
 
-} */
+h1 {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 16px;
+  text-align: left;
+  color: #000000;
+  margin: 10px 0px 0px 0px;
+}
 
 article {
-  border: 3px blue solid;
-  width: 400px;
-  height: 200px;
+  /* border: 3px blue solid; */
+  width: 100%;
+  height: 200px;    
+  padding: 5px;
 }
 
 /** SMALLER NEWS SECTION **/
 
-.smaller-news {
+.small-news {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  border: 3px solid pink;
+  border: 1px solid pink;
+  margin: 10px 0px 0px 0px;
 }
 
-/** SMALLER NEWS TEXT BOX**/
+/** SMALL NEWS TEXT BOX**/
 
 a {
   font-family: Georgia, 'Times New Roman', Times, serif;
   text-transform: uppercase;
   text-decoration: none;
   font-size: 12px;
-  /* margin: 5px; */
   text-align: left;
   color: #DB3334;
+  margin: 0px 0px 0px 5px;
 }
 
 h2 {
@@ -117,54 +127,61 @@ h2 {
   text-transform: uppercase;
   text-decoration: none;
   font-size: 14px;
-  /* margin: 5px; */
   text-align: left;
   color: #000000;
+  margin: 5px;
 }
 
-.smaller-news p {
+.small-news p {
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 10px;
   font-weight: bolder;
-  /* margin: 5px; */
   text-align: left;
   color: #000000;
+  margin: 5px;
 }
 
-.smaller-news img {
-  width: 130px;
+.small-news img {
+  width: 40%;
   height: 130px;
-  /* border: 3px solid red; */
 }
 
-.smaller-news article {
-  width: 130px;
+.small-news article {
+  width: 50%;
   height: 130px;
-  border: 3px dotted darkmagenta;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
 }
 
-.smaller-news-cards {
+.small-news-card {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  border: 3px solid yellow;
+  /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); */
+  border-top: 1px #E5E5E5 solid;
+  padding: 5px;
+  margin-bottom: 10px;
 }
 
-.smaller-news-cards div {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  /* border: 3px solid grey; */
+footer {
+  background: #000000;
+  position: absolute;
+  right: 0;
+  left: 0;
+  padding: 10px;
+  text-align: center;
+  margin: 10px 0px 0px 0px;
+  border-top: 1px #E5E5E5 solid;
 }
 
-.single-little-card {
-  margin: 10px;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  border: 1px solid cyan;
-  /* transition: 0.3s; */
+footer p {
+  background: #000000;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: ;
+  color: #ffffffa4;
+  margin: auto;
+  font-size: 12px;
+  line-height: 1.3;
 }
 
 body {
