--- a/code/style.css
+++ b/code/style.css
@@ -5,7 +5,8 @@ body{
   font-family: 'Baloo Tamma 2', cursive;
   background-color: rgb(240, 235, 227);
 }
-html { font-size: 16px; }
+html { font-size: 16px; 
+}
 
 /** Header **/
 header{
@@ -14,37 +15,44 @@ header{
 	height: 70px;
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
+	
 }
 header h1{
-	font-size: 30px;
-	margin:0px;
+	font-size: 40px;
+	margin:0px 30px 0px 10px;
 	padding:0px;
-	align-items: flex-start;
+}
+
+header a{
+	text-decoration: none;
+	color: black;
+	font-size: 20px;
 }
 nav{
 	display: none;
 }
+a:hover {
+	background-color:whitesmoke;
+  }
 /*** Big news section **/
-  .big-news p{
-	padding: 1rem;
-	width:300px;
-	height:70%;  
-  }
+  
   .big-news{
-	padding: 1rem;
-	width:300px;
-	height:70%;
-	height: 600px;
+	padding:80px 16px;
 	display: flex;
-	align-items: center;
+	flex-direction: column;
+	width: 100%;
+	max-width: 1200px;
+	margin: 0 auto;
 	justify-content: center;
-	 flex-wrap: wrap;
+
   }
- 
+ .big-news div{
+	 text-align: center;
+ }
+
   .big_news img { 
-	  width:100%; 
-	  height:100%; 
+	width:100%; 
+	   
   } 
 /*** News cards section **/
 .card {
@@ -57,18 +65,32 @@ nav{
 	margin: 0 auto;
 	display: grid;
 	grid-gap: 1rem;
+	justify-content: center;
 }
 .news_cards img { 
 	width:100%; 
 	height:100%; 
 } 
 
+
 /*** Media Queries **/
 @media (min-width: 600px) {
 	.news_cards { 
 		grid-template-columns: repeat(2, 1fr); 
 	}
-  }
+	nav{
+		color:black;
+		text-decoration:none;
+		width:100%;
+		display:flex;
+		align-items: flex-end;
+		flex-direction: row;
+	}
+	header h1{
+		display:none;
+	}
+	
+}
 
 @media (min-width: 900px) {
 	.news_cards { 
@@ -81,10 +103,19 @@ nav{
 		display:flex;
 		justify-content: space-evenly;
 	}
+	header h1{
+		font-size: 40px;
+		margin:0px 30px 0px 10px;
+		padding:0px;
+		
+	}
+	
+	
 }
 
 
 /* Footer */
+
 footer{
   margin: 20px;
   display:flex;
@@ -98,4 +129,3 @@ footer img{
 	height: 45px;
 	width: 45px;
 }
-
