--- a/code/style.css
+++ b/code/style.css
@@ -109,7 +109,7 @@ h3 {
   place-content: center;
   padding-left: 10px;
   padding-right: 10px;
-  padding-top: 10px;
+  padding-top: 0
   padding-bottom: 10px;
   border: #ccbeb4 2px solid;
   background-color: #ddd3cc;
@@ -117,7 +117,7 @@ h3 {
 hr {
   display: block;
   border-color: #312f2d;
-  width: 80%;
+  width: 50%;
   unicode-bidi: isolate;
   margin-left: auto;
   margin-right: auto;
@@ -135,18 +135,56 @@ hr {
 .btn:hover {
   background-color: white;
 }
-.card {
-  display: flex;
+
+.h1-news {
+  justify-content: left;
+  margin-top: 15px;
+  margin-bottom: 5px;
+  padding-left: 250px;
+  font-style: italic;
+  font-weight: 400;
+  font-size: 20px;
+}
+
+
+.container .card {
+  display: inline-table;
+  flex-direction: row;
+  justify-content: space-evenly;
   flex-wrap: wrap;
+  /* flex: 25%;
+  max-width: 25%;  */
   text-align: left;
-  padding-top: 20px;
-  vertical-align: middle;
+  padding: 25px 12px;
+  vertical-align: middle; 
+  width: 100%;
+  height: 100%;
+  /* border: 5px solid; */
 }
+
 .card-container .container {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
-  
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
 }
+.card img{
+  border: 1px solid #312f2d;
+  box-shadow: 5px 5px 5px #ccbeb4;
+  -webkit-box-shadow: 5px 5px 5px #ccbeb4;
+  margin-top: 3px;
+  margin-bottom: 3px;
+}
+.card h6 {
+  text-align: left;
+}
+.card p, h4 {
+  text-align: left;
+}
+
+
 
 .icon {
   text-decoration: none;
@@ -168,6 +206,7 @@ hr {
 .footer {
   display: flex;
   justify-content: space-evenly;
+  background-color: whitesmoke;
   
 }
 @media (min-width: 760px) and (max-width: 1024px){
@@ -183,7 +222,7 @@ hr {
   color: #312f2d;
   place-items: center;
   margin: 0 auto;
-  font-size: 20px;
+  font-size: 30px;
   font-style: bolder;
   letter-spacing: 10px;
   font-weight: 600;
@@ -222,7 +261,11 @@ h3 {
 }
 .navbar-brand {
   display: none;
-
+}
+.h1-news {
+  text-align: left;
+  padding: 5px 5px 5px 100px;
+  font-size: 10px;
 }
 
 }
