--- a/code/style.css
+++ b/code/style.css
@@ -159,19 +159,20 @@ h2 {
 
 /*** FOOTER ****/
 
-.footer {
-  text-align: center;
+footer {
+  display:flex;
+  align-items: center;
+  justify-content: center;
   padding: 0px;
   background-color:#f6f4e6;
   width: 100%;
   height: 125px;
-  line-height: 100px;
 }
-.footer p {
+
+footer p {
   font-family:"didot";
   font-size: 14px;
   color: rgb(29, 29, 29);
-  text-align: center;
 }
 
 /**** TABLET ****/
